<resources>
    <string name="app_name">RoomHomework</string>
    <string name="list_of_homework_text">LIST OF HOMEWORK</string>
    <string name="create_new_homework_entry_button_text">CREATE NEW HOMEWORK ENTRY</string>
    <string name="insert_new_homework_entry_button_text">Save To List</string>
    <string name="homework_subject_text">Subject: %s android application</string>
    <string name="homework_completed_text">Completed: %s</string>
    <string name="homework_week_text">Week: %s</string>
    <string name="homework_day_text">Day: %d</string>
    <string name="is_homework_complete_true">yes</string>
    <string name="is_homework_complete_false">no</string>
    <string name="error_text">Error: %s</string>
    <string name="no_homework_listed">No %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="homework_subject_edittext">Enter Subject</string>
    <string name="homework_complete_edittext">Is It Complete</string>
    <string name="homework_week_edittext">Week</string>
    <string name="homework_day_edittext">Day</string>
</resources>
