<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".view.NewHomeworkEntryFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/close_icon_imageview"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/enter_homework_subject_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_homework_subject_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        android:hint="@string/homework_subject_edittext"
        app:layout_constraintBottom_toTopOf="@id/enter_homework_completed_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_icon_imageview" />

    <EditText
        android:id="@+id/enter_homework_completed_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        android:hint="@string/homework_complete_edittext"
        app:layout_constraintBottom_toTopOf="@id/enter_homework_week_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_homework_subject_edittext" />

    <EditText
        android:id="@+id/enter_homework_week_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="number"
        android:hint="@string/homework_week_edittext"
        app:layout_constraintBottom_toTopOf="@+id/enter_homework_day_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_homework_completed_edittext" />

    <EditText
        android:id="@+id/enter_homework_day_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="number"
        android:hint="@string/homework_day_edittext"
        app:layout_constraintBottom_toTopOf="@+id/insert_new_homework_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_homework_week_edittext" />


    <Button
        android:id="@+id/insert_new_homework_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/insert_new_homework_entry_button_text"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_homework_day_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>